--- a/core/android_dependencies.gradle
+++ b/core/android_dependencies.gradle
@@ -2,7 +2,7 @@ android {
     compileSdkVersion 31
     defaultConfig {
         minSdkVersion 28
-        targetSdkVersion 28
+        targetSdk 32
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
