--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -47,7 +47,7 @@ android {
 
     defaultConfig {
         minSdkVersion 23
-        targetSdkVersion 29
+        targetSdk 28
         versionCode 2
         versionName "1.0.3"
         buildConfigField "String", "BUILDVERSION", generateGitBuild()
